# Car-Dealership-Inventory

./: CMakeLists.txt  Car.cpp  Car.h  README.md  SUV.cpp  SUV.h  car.cpp  car.h  convertible.cpp  convertible.h  main.cpp  offroadVehicle.cpp  offroadVehicle.h  testing.cpp  truck.cpp  truck.h
